# sqlly-textbox

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.rs
src/: actions.rs  history.rs  lib.rs  mode.rs  selection.rs  state.rs  text_box.rs  text_box_element.rs  utf.rs  validation.rs
tests/: text_box_gpui.rs
